# ak680-studio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_PLAYBOOK.md  README.md  RED_TEAM_WP1_TEST_PLAN.md  RESEARCH_NOTES.md  SECURITY.md  WP15_READ_PROTOCOL_EVIDENCE_GUIDE.md  WP16_READ_ONLY_SETTINGS_FOUNDATION.md  WP17_FIRST_WRITE_EVIDENCE_PLAN.md  WP18_FIRST_WRITE_CANDIDATE_SELECTION.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  device_detection_report.md  feature_request.md
fixtures/: ak680-official-profile.sanitized.json  ak680-profile.sample.json  wp15-read-protocol-evidence.example.json  wp17-first-write-evidence.example.json  wp18-first-write-candidate-selection.example.json  wp20-lighting-dry-run.example.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: controlled_lighting_write.rs  controlled_read.rs  hid_detection.rs  lib.rs  main.rs
src/components/: InfoGrid.tsx  JsonPreview.tsx  ReadOnlyPill.tsx
src/lib/: controlledLightingWriteExperiment.test.ts  controlledLightingWriteExperiment.ts  controlledReadExperiment.test.ts  controlledReadExperiment.ts  dryRunPlanner.test.ts  dryRunPlanner.ts  firstWriteCandidateSelection.test.ts  firstWriteCandidateSelection.ts  firstWriteEvidence.test.ts  firstWriteEvidence.ts  hardwareSmokeTest.test.ts  hardwareSmokeTest.ts  lightingDryRunPlanner.test.ts  lightingDryRunPlanner.ts  localEditor.test.ts  localEditor.ts  localProfiles.test.ts  (+12 more)
(+3 files in other folders)
