[package]
name = "ak680-studio"
version = "0.1.0"
description = "Read-only native profile inspector for the AJAZZ AK680 V2 keyboard"
authors = ["AK680 Studio contributors"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "ak680_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hidapi = "2"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
